--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
+    "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-web": "~0.13.12",
-    "expo-av": "~8.6.0",
-    "expo-asset": "~8.2.0",
+    "expo-av": "~8.7.0",
+    "expo-asset": "~8.7.0",
     "expo-constants": "~9.2.0",
     "react-native-paper": "3.6.0",
-    "expo-linear-gradient": "~8.3.0"
+    "expo-linear-gradient": "~8.4.0",
+    "buffer": "*"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
